--- a/index.html
+++ b/index.html
@@ -9,4 +9,9 @@
 <body>
     <h1>testando</h1>
 </body>
+<script>
+    localStorage.setItem("nome", "Matheus")
+
+    document.getElementById("Div").innerHTML = localStorage.getItem("nome")
+</script>
 </html>
