--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div id="Div"></div>
 </body>
 <script>
-    localStorage.setItem("nome", "Matheus")
+    localStorage.nome = "Matheus"
 
-    document.getElementById("Div").innerHTML = localStorage.getItem("nome")
+    document.getElementById("Div").innerHTML = localStorage.nome
 </script>
 </html>
