--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     function caregar() {
         var tela = document.getElementById("tela")
-        if (localStorage.info == 'undefined') {
+        if (localStorage.info == undefined) {
             window.alert('você não salvou nada')
         } else{
             tela.innerText = localStorage.info
