--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     function caregar() {
         var tela = document.getElementById("tela")
-        if (localStorage.info = "undefined") {
+        if (localStorage = "undefined") {
             window.alert('você não salvou nada')
             tala.innerText = ""
         } else{
